Clean up repository

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
   <article>
     <header><h3>Sub-national birth rates in SSA</h3></header>
-	<img src="version2.png" alt="Italian Trulli">
-	<figcaption>Estimated crude birth rates in 2019</figcaption>
+	<img src="birth-rates-map.png" alt="Italian Trulli">
+	<figcaption><em>Estimated crude birth rates in 2019</em></figcaption>
   </article>
 
   <article>
@@ -57,8 +57,8 @@
   
     <article>
     <header><h3>Sub-national Facebook coverage in SSA</h3></header>
-	<img src="fb.png" alt="Italian Trulli">
-	<figcaption>Observed % of Facebook in 2021</figcaption>
+	<img src="fb-coverage-maps.png" alt="Italian Trulli">
+	<figcaption><em>Observed % of Facebook in 2021</em></figcaption>
   </article>
   
     <article>
@@ -71,7 +71,7 @@
   
     <article>
     <header><h3>Descriptive relations between included variables and subnational birth rates</h3></header>
-	<img src="test2.png" alt="Italian Trulli">
+	<img src="descriptive-boxplot.png" alt="Italian Trulli">
   </article>
   
     <article>
@@ -86,7 +86,7 @@
 
     <article>
     <header><h3>Regression results</h3></header>
-	<img src="test4.png" alt="Italian Trulli">
+	<img src="regression-results.png" alt="Italian Trulli">
 	<p> The results revealed that higher social media coverage and smaller gender gaps in social media coverage are significantly associated with lower birth rates.
   </article>
   
