--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   
     <article>
     <header><h3>Sub-national Facebook coverage in SSA</h3></header>
-	<img src="fb-coverage-maps.png" alt="Italian Trulli">
+	<img src="fb-coverage-map.png" alt="Italian Trulli">
 	<figcaption><em>Observed % of Facebook in 2021</em></figcaption>
   </article>
   
