--- a/index.html
+++ b/index.html
@@ -39,34 +39,37 @@
         <article property="abstract">
         <header><h3>SSA's background of high birth rates</h3></header>
 
-    <p>The birth rates in sub-Saharan African (SSA) countries are among the highest in the world. At the same time, there infrastructure is among the poorest in the world, and as such many communities in SSA are hard to reach. Individuals living in these remote communities hardly receive information and ideas regarding fertility behavior from outside their community.
-	<br><br>The received information and ideas about fertility are a key element in determining a person's future fertility behavior following diffusion theories. As such, diffusion theories predict that if current fertility rates are high, they are likely to remain high in SSA due to the poor quality of their infrastructure.</p>
+    <p>The birth rates in sub-Saharan African (SSA) countries are among the highest in the world. At the same time, their infrastructure is among the poorest in the world which results in the existence of many communities that are hard to reach. As such, individuals living in these remote communities hardly receive information and ideas regarding fertility behavior from outside their community.
+	<br><br>This spread of information and norms about fertility behavior are a key element in determining a person's fertility behavior, like the number of children one get, following diffusion theories. 
+	As such, diffusion theories predict that if the norm exists to give birth to a high number of children, as is the case in many communities in SSA, birth rates are likely to remain high due to the poor quality of SSA's infrastructure.</p>
   </article>
 
   <article>
     <header><h3>Sub-national birth rates in SSA</h3></header>
 	<img src="birth-rates-map.png" alt="Italian Trulli">
-	<figcaption><em>Estimated crude birth rates in 2019</em></figcaption>
+	<figcaption><em>Estimated Crude Birth Rates in 2019</em></figcaption>
   </article>
 
   <article>
     <header><h3>The rise of social media</h3></header>
-    <p>One type of infrastructure, the digital infrastructure, showed a rapid expansion in most recent years. Over 90% of the Africans had access to a mobile phone and almost 30% was connected to the internet in 2020. The digital infrastructure enabled the use of social media, which is characterized by digital interactivity between its users. 
-	<br><br>As the digital infrastructure transcends the community borders easily, social media has the potential to expose individuals to less community-specific and to more globalized fertility behaviors. As such, an important question has arisen: “To what extent is social media related to fertility rates in subnational regions in SSA? </p>
+    <p>One type of infrastructure, the digital infrastructure, showed a rapid expansion in most recent years. Over 90% of the Africans had access to a mobile phone and almost 30% was connected to the internet in 2020. 
+	The digital infrastructure enabled the use of social media. A key characteristic of social media is digital social interactivity between its users. 
+	<br><br>As social media transcends physical community borders easily, it has the potential to expose individuals to fertility information and norms on a global scale. The receiving of information and norms is thus no longer restricted to one's community.
+	As such, social media potentially serves as an important medium to influence birth rates in SSA, but to what extent this is happening is yet not known. </p>
   </article>
   
     <article>
     <header><h3>Sub-national Facebook coverage in SSA</h3></header>
 	<img src="fb-coverage-map.png" alt="Italian Trulli">
-	<figcaption><em>Observed % of Facebook in 2021</em></figcaption>
+	<figcaption><em>Observed % with a Facebook account in 2021</em></figcaption>
   </article>
   
     <article>
     <header><h3>Research Questions & Hypotheses</h3></header>
-    <p>To what extent is social media coverage associated with birth rates in subnational regions in SSA? 
-	<br><br> H1: A higher subnational Facebook coverage relates with lower subnational crude birth rates.
-	<br><br>To what extent is social media coverage of women versus men associated with birth rates?
-	<br><br> H2: When women have better access to social media in comparison to men, we expect lower subnational birth rates.
+    <p>To what extent is social media exposure associated with birth rates in subnational regions in SSA? 
+	<br><br> <em>H1: Higher Facebook exposure relates with lower subnational birth rates.</em>
+	<br><br>To what extent is social media exposure of men versus women associated with birth rates?
+	<br><br> <em>H2: When women are more exposed to social media in comparison to men, we expect lower subnational birth rates.</em>
   </article>
   
     <article>
@@ -101,7 +104,7 @@
     </main>
 
     <footer>
-      <address class="monospace">  jet.wildeman@ru.nl
+      <address class="monospace">  corresponding author: jet.wildeman@ru.nl
 </address>
                     <span class="credits">
           Based on an <a href="https://github.com/cpitclaudel/academic-poster-template">open poster template</a>.
