--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </article>
   
     <article>
-    <header><h3>Sub-national Facebook coverage in SSA</h3></header>
+    <header><h3>Sub-national Facebook exposure in SSA</h3></header>
 	<img src="fb-coverage-map.png" alt="Italian Trulli">
 	<figcaption><em>Observed % with a Facebook account in 2021</em></figcaption>
   </article>
@@ -73,31 +73,31 @@
   </article>
   
     <article>
-    <header><h3>Descriptive relations between included variables and subnational birth rates</h3></header>
+    <header><h3>Higher Facebook exposure in low birth rate regions</h3></header>
 	<img src="descriptive-boxplot.png" alt="Italian Trulli">
+	<figcaption><em>Descriptive relations between crude birth rates and the included variables</em></figcaption>
   </article>
   
     <article>
     <header><h3>Methods & data</h3></header>
     <p>To create subnational social media indicators, we used Facebook’s advertisement platform. Facebook allows their users to search the number of active Facebook users in last month disaggregated by various geographic and demographic characteristics (detailed information 
-	can <a href="https://developers.facebook.com/docs/marketing-apis">here</a> be found). We created active users estimates for individuals aged 15-39 for 311 subnational regions in 29 SSA countries.
-	<br>The Facebook data was combined with data from the <a href="https://dhsprogram.com/">DHS</a> and <a href="https://mics.unicef.org/">MICS</a> surveys to create subnational crude birth rates, and with data from the <a href="https://www.worldbank.org/en/home">World Bank</a>
-	and the <a href="https://www.afrobarometer.org/">Afrobarometer</a> to create the independent variables.
-	<br><br> Method: multilevel regression models and OLS regression models with Crude Birth Rates as dependent variable are applied.
+	can be found <a href="https://developers.facebook.com/docs/marketing-apis">here</a>). We created active users estimates for individuals aged 15-39 over 311 subnational regions in 29 SSA countries.
+	<br><br>We combined the Facebook data with data from the <a href="https://dhsprogram.com/">DHS</a> and <a href="https://mics.unicef.org/">MICS</a> surveys to create subnational crude birth rates, and with data from the <a href="https://www.worldbank.org/en/home">World Bank</a>
+	and the <a href="https://www.afrobarometer.org/">Afrobarometer</a> to create the independent variables. We used multilevel and OLS regression models to test the relation between birth rates and social media exposure.
 	</p>
   </article>
 
     <article>
     <header><h3>Regression results</h3></header>
-	<img src="regression-results.png" alt="Italian Trulli">
-	<p> The results revealed that higher social media coverage and smaller gender gaps in social media coverage are significantly associated with lower birth rates.
+	<p> The results reveal that higher social media exposure and smaller gender gaps in exposure are significantly associated with lower birth rates.
+	<br><br><img src="regression-results2.png" alt="Italian Trulli">
   </article>
   
   
     <article>
     <header><h3>Discussion</h3></header>
-    <p> A possible explanation in line with diffusion theories is that social media enable their users to form (online) communities in which information and ideas can be spread irrespective of an individual's place of living. But, we cannot exclude the alternative interpretation that individuals who had different norms and values were more likely to be exposed to social media.
-	<br><br>Future thoughts and research are required to disentagle the mechanisms that explain the association between fertility levels and social media. Understanding what is going on is urgent because social media is becoming more and more prevalent en this study showed potential consequences in terms of birth rates, and thus also potentially population growth.   
+    <p> We find that social media exposure relates to lower birth rates in SSA. A possible explanation is that social media enable their users to form (online) communities in which information and ideas can be spread irrespective of individuals' place of living. But, we cannot exclude that individuals who had already different norms and values are more likely to be exposed to social media.
+	<br><br>Future thoughts and research are required to disentagle the mechanisms that explain the association between social media and birth rates. Understanding what is going on is urgent as social media is becoming more and more prevalent, and we showed that this could have real consequences in terms of birth rates and thus as well population growth.   
   </article>
  
   
