--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <article>
     <header><h3>Regression results</h3></header>
 	<p> The results reveal that higher social media exposure and smaller gender gaps in exposure are significantly associated with lower birth rates.
-	<br><br><img src="regression-results2.png" alt="Italian Trulli">
+	<br><br><img src="regression-results.png" alt="Italian Trulli">
   </article>
   
   
