--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header><h3>SSA's background of high birth rates</h3></header>
 
     <p>The birth rates in sub-Saharan African (SSA) countries are among the highest in the world. At the same time, their infrastructure is among the poorest in the world which results in the existence of many communities that are hard to reach. As such, individuals living in these remote communities hardly receive information and ideas regarding fertility behavior from outside their community.
-	<br><br>This spread of information and norms about fertility behavior are a key element in determining a person's fertility behavior, like the number of children one get, following diffusion theories. 
+	<br><br>This spread of information and norms about fertility behavior are a key element in determining a person's fertility behavior, like the number of children one gets, following diffusion theories. 
 	As such, diffusion theories predict that if the norm exists to give birth to a high number of children, as is the case in many communities in SSA, birth rates are likely to remain high due to the poor quality of SSA's infrastructure.</p>
   </article>
 
@@ -54,7 +54,7 @@
     <header><h3>The rise of social media</h3></header>
     <p>One type of infrastructure, the digital infrastructure, showed a rapid expansion in most recent years. Over 90% of the Africans had access to a mobile phone and almost 30% was connected to the internet in 2020. 
 	The digital infrastructure enabled the use of social media. A key characteristic of social media is digital social interactivity between its users. 
-	<br><br>As social media transcends physical community borders easily, it has the potential to expose individuals to fertility information and norms on a global scale. The receiving of information and norms is thus no longer restricted to one's community.
+	<br><br>As social media transcends physical community borders easily, it has the potential to expose individuals to fertility information and norms on a global scale. Receiving of information and norms is thus no longer restricted to one's community.
 	As such, social media potentially serves as an important medium to influence birth rates in SSA, but to what extent this is happening is yet not known. </p>
   </article>
   
@@ -89,7 +89,7 @@
 
     <article>
     <header><h3>Regression results</h3></header>
-	<p> The results reveal that higher social media exposure and smaller gender gaps in exposure are significantly associated with lower birth rates.
+	<p> The results show that higher social media exposure and higher exposure of women compared to men are significantly associated with lower birth rates.
 	<br><br><img src="regression-results.png" alt="Italian Trulli">
   </article>
   
