--- a/index.html
+++ b/index.html
@@ -37,67 +37,51 @@
 
     <main property="articleBody">
         <article property="abstract">
-        <header><h3>SSA's background of high birth rates</h3></header>
+        <header><h3>Birth rates remain high due to absence of infrastructure</h3></header>
 
-    <p>The birth rates in sub-Saharan African (SSA) countries are among the highest in the world. At the same time, their infrastructure is among the poorest in the world which results in the existence of many communities that are hard to reach. As such, individuals living in these remote communities hardly receive information and ideas regarding fertility behavior from outside their community.
-	<br><br>This spread of information and norms about fertility behavior are a key element in determining a person's fertility behavior, like the number of children one gets, following diffusion theories. 
-	As such, diffusion theories predict that if the norm exists to give birth to a high number of children, as is the case in many communities in SSA, birth rates are likely to remain high due to the poor quality of SSA's infrastructure.</p>
+    <p>Why? Diffusion of information along infrastructure key for fertility preferences and behavior.</p>
   </article>
 
   <article>
-    <header><h3>Sub-national birth rates in SSA</h3></header>
+    <header><h3>Estimated Crude Birth Rates in 2019</h3></header>
 	<img src="birth-rates-map.png" alt="Italian Trulli">
-	<figcaption><em>Estimated Crude Birth Rates in 2019</em></figcaption>
   </article>
 
   <article>
-    <header><h3>The rise of social media</h3></header>
-    <p>One type of infrastructure, the digital infrastructure, showed a rapid expansion in most recent years. Over 90% of the Africans had access to a mobile phone and almost 30% was connected to the internet in 2020. 
-	The digital infrastructure enabled the use of social media. A key characteristic of social media is digital social interactivity between its users. 
-	<br><br>As social media transcends physical community borders easily, it has the potential to expose individuals to fertility information and norms on a global scale. Receiving of information and norms is thus no longer restricted to one's community.
-	As such, social media potentially serves as an important medium to influence birth rates in SSA, but to what extent this is happening is yet not known. </p>
+    <header><h3>Social media offers new information and social contacs</h3></header>
+    <p>Internet infrastructure, and thus social media is increasing. Social media can easily reach remote areas and widen social contact opportunities and information about fertility behavior . This relation is addressed in this study. 
+</p>
   </article>
   
     <article>
-    <header><h3>Sub-national Facebook exposure in SSA</h3></header>
+    <header><h3>The percentage of Facebook accounts in 2021</h3></header>
 	<img src="fb-coverage-map.png" alt="Italian Trulli">
-	<figcaption><em>Observed % with a Facebook account in 2021</em></figcaption>
   </article>
+ 
   
     <article>
-    <header><h3>Research Questions & Hypotheses</h3></header>
-    <p>To what extent is social media exposure associated with birth rates in subnational regions in SSA? 
-	<br><br> <em>H1: Higher Facebook exposure relates with lower subnational birth rates.</em>
-	<br><br>To what extent is social media exposure of men versus women associated with birth rates?
-	<br><br> <em>H2: When women are more exposed to social media in comparison to men, we expect lower subnational birth rates.</em>
-  </article>
-  
-    <article>
-    <header><h3>Higher Facebook exposure in low birth rate regions</h3></header>
+    <header><h3>Descriptives between birth rates and social media</h3></header>
 	<img src="descriptive-boxplot.png" alt="Italian Trulli">
-	<figcaption><em>Descriptive relations between crude birth rates and the included variables</em></figcaption>
   </article>
   
-    <article>
+      <article>
     <header><h3>Methods & data</h3></header>
-    <p>To create subnational social media indicators, we used Facebook’s advertisement platform. Facebook allows their users to search the number of active Facebook users in last month disaggregated by various geographic and demographic characteristics (detailed information 
-	can be found <a href="https://developers.facebook.com/docs/marketing-apis">here</a>). We created active users estimates for individuals aged 15-39 over 311 subnational regions in 29 SSA countries.
-	<br><br>We combined the Facebook data with data from the <a href="https://dhsprogram.com/">DHS</a> and <a href="https://mics.unicef.org/">MICS</a> surveys to create subnational crude birth rates, and with data from the <a href="https://www.worldbank.org/en/home">World Bank</a>
-	and the <a href="https://www.afrobarometer.org/">Afrobarometer</a> to create the independent variables. We used multilevel and OLS regression models to test the relation between birth rates and social media exposure.
+    <p>To create subnational social media indicators, we used Facebook’s advertisement platform(detailed information 
+	can be found <a href="https://developers.facebook.com/docs/marketing-apis">here</a>). 
+	We created active users estimates for individuals aged 15-39 over 311 subnational regions in 29 SSA countries. 
+	Other data sources are: <a href="https://dhsprogram.com/">DHS</a>, <a href="https://mics.unicef.org/">MICS</a>, <a href="https://www.worldbank.org/en/home">Worldbank</a>,
+	<a href="https://globaldatalab.org/">Globaldatalab</a> and <a href="https://www.afrobarometer.org/">Afrobarometer</a>.
 	</p>
   </article>
-
+  
     <article>
-    <header><h3>Regression results</h3></header>
-	<p> The results show that higher social media exposure and higher exposure of women compared to men are significantly associated with lower birth rates.
-	<br><br><img src="regression-results.png" alt="Italian Trulli">
+    <header><h3>Facebook exposure related to lower birth rates</h3></header>
+	<img src="regression-results.png" alt="Italian Trulli">
   </article>
-  
-  
-    <article>
-    <header><h3>Discussion</h3></header>
-    <p> We find that social media exposure relates to lower birth rates in SSA. A possible explanation is that social media enable their users to form (online) communities in which information and ideas can be spread irrespective of individuals' place of living. But, we cannot exclude that individuals who had already different norms and values are more likely to be exposed to social media.
-	<br><br>Future thoughts and research are required to disentagle the mechanisms that explain the association between social media and birth rates. Understanding what is going on is urgent as social media is becoming more and more prevalent, and we showed that this could have real consequences in terms of birth rates and thus as well population growth.   
+
+     <article>
+    <header><h3>The how questions remains for future studies</h3></header>
+	<p>Examining the mechanisms between social media and birth rates is urgent as this study showed the possible consequences in terms of birth rates and thus also in term of population size developments.   
   </article>
  
   
