--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <aside>
       </aside>
       <div>
-        <h1 property="headline">Social media relates to lower birth rates in sub-Saharan Africa</h1>
+        <h1 property="headline">Social media links to lower birth rates in sub-Saharan Africa</h1>
                 <address>
               <a property="author">Jet Wildeman, <sup>a</sup></a>
 			  <a property="author">J.P.J.M. Smits, <sup>a</sup></a>
@@ -39,17 +39,22 @@
         <article property="abstract">
         <header><h3>Birth rates remain high due to absence of infrastructure</h3></header>
 
-    <p>Why? Diffusion of information along infrastructure key for fertility preferences and behavior.</p>
+    <p>
+	Why? Diffusion of information and norms along infrastructure key for fertility preferences and behavior. As sub-Sahara African (SSA) countries have among 
+	the highest birth rates and worst infrastructure in the world,
+	information and norms are dependent on physical proximity.</p>
   </article>
 
   <article>
-    <header><h3>Estimated Crude Birth Rates in 2019</h3></header>
+    <header><h3>Estimated crude birth rates in 2019</h3></header>
 	<img src="birth-rates-map.png" alt="Italian Trulli">
   </article>
 
   <article>
-    <header><h3>Social media offers new information and social contacs</h3></header>
-    <p>Internet infrastructure, and thus social media is increasing. Social media can easily reach remote areas and widen social contact opportunities and information about fertility behavior . This relation is addressed in this study. 
+    <header><h3>Social media offers new information and social contacts</h3></header>
+    <p>Digital infrastructure increased tremendously and paved the way for social media. Social media can easily reach remote areas
+	and widen (digital) social contact opportunities. This could result in learning about new information and norms.
+	The relationship between social media and birth rates is adressed in this study. 
 </p>
   </article>
   
@@ -60,7 +65,7 @@
  
   
     <article>
-    <header><h3>Descriptives between birth rates and social media</h3></header>
+    <header><h3>Descriptives: birth rates and social media</h3></header>
 	<img src="descriptive-boxplot.png" alt="Italian Trulli">
   </article>
   
@@ -75,13 +80,14 @@
   </article>
   
     <article>
-    <header><h3>Facebook exposure related to lower birth rates</h3></header>
+    <header><h3>Facebook associated with lower birth rates</h3></header>
 	<img src="regression-results.png" alt="Italian Trulli">
   </article>
 
      <article>
-    <header><h3>The how questions remains for future studies</h3></header>
-	<p>Examining the mechanisms between social media and birth rates is urgent as this study showed the possible consequences in terms of birth rates and thus also in term of population size developments.   
+    <header><h3>Future birth rates lower due to social media?</h3></header>
+	<p>This study showed the urgence to examine how social media influence fertility rates. Social media exposure keeps increasing and could have important consequences in terms of birth rates and population size development. Future research should address this.
+	</p>
   </article>
  
   
