--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
   </article>
 
   <article>
-    <header><h3>Estimated crude birth rates in 2019</h3></header>
+    <header><h3>Crude birth rates in 2019</h3></header>
 	<img src="birth-rates-map.png" alt="Italian Trulli">
   </article>
 
   <article>
     <header><h3>Social media offers new information and social contacts</h3></header>
     <p>Digital infrastructure increased tremendously and paved the way for social media. Social media can easily reach remote areas
-	and widen (digital) social contact opportunities. This could result in learning about new information and norms.
+	and widen (digital) social contact opportunities. This could result in learning about new fertility information and norms.
 	The relationship between social media and birth rates is adressed in this study. 
 </p>
   </article>
   
     <article>
-    <header><h3>The percentage of Facebook accounts in 2021</h3></header>
+    <header><h3>Percentage Facebook accounts in 2021</h3></header>
 	<img src="fb-coverage-map.png" alt="Italian Trulli">
   </article>
  
