added link to github

--- a/index.html
+++ b/index.html
@@ -89,13 +89,15 @@
 	<p>This study showed the urgence to examine how social media influence fertility rates. Social media exposure keeps increasing and could have important consequences in terms of birth rates and population size development. Future research should address this.
 	</p>
   </article>
- 
   
     </main>
 
     <footer>
-      <address class="monospace">  corresponding author: jet.wildeman@ru.nl
+      <address class="monospace">  Corresponding author: jet.wildeman@ru.nl
 </address>
+<span class="credits">
+Online version and code available at <a href="https://jetwildeman.github.io/EAPSPoster/">https://jetwildeman.github.io/EAPSPoster/</a>
+</span>
                     <span class="credits">
           Based on an <a href="https://github.com/cpitclaudel/academic-poster-template">open poster template</a>.
         </span>
