meeting screen fit

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <address class="monospace">  Corresponding author: jet.wildeman@ru.nl
 </address>
 <span class="credits">
-Online version and code available at <a href="https://jetwildeman.github.io/EAPSPoster/">https://jetwildeman.github.io/EAPSPoster/</a>
+Online version and code available at: <a href="https://jetwildeman.github.io/EAPSPoster/">https://jetwildeman.github.io/EAPSPoster/</a>
 </span>
                     <span class="credits">
           Based on an <a href="https://github.com/cpitclaudel/academic-poster-template">open poster template</a>.
